# coolify-manager-rs

./: .env.example  .gitignore  Cargo.toml  GUI-WINDOWS-EVAL.md  MCP-VSCODE.md  NATIVE-NGINX-EVAL.md  README.md  TESTING-OFFLINE.md  clippy_out.txt  package.json  plan-cm.md  roadmap.md
Agente/completados/: tareas-2026-05-12.md  tareas-2026-05-14.md
Agente/planes/: plan-optimizacion-seguridad-vps-portable-2026-05-24.md  plan-vps-nakomi-studio-2026-05-12.md
config/templates/: Dockerfile.kamples  Dockerfile.rust  init-postgres.sh  kamples-stack.yaml  rust-stack.yaml
docs/: commit-plan-2026-07-23.md
gui/: index.html  package.json
gui/src/: App.tsx  main.tsx  tipos.ts
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/icons/: icon.icns
gui/src-tauri/src/: main.rs
scripts/: backup-server.sh  clean-cargo-target.ps1  dev-web.mjs  upload-and-run.sh  wp-apache-debug.sh  wp-build-react.sh  wp-clear-recovery.php  wp-curl-full.sh  wp-diagnose.php  wp-homepage-debug.sh  wp-http-diagnose.php  wp-http-via-curl.sh  wp-timing.php
src/: auth.rs  env_loader.rs  gui_api.rs  lib.rs  main.rs
src/api/: mod.rs  site_commands.rs  types.rs
src/cli/: dispatch.rs  mod.rs
src/commands/: audit_control_plane.rs  audit_redis_latency.rs  audit_security.rs  audit_vps.rs  auth_drive.rs  backup_site.rs  bootstrap_target_light.rs  cache_site.rs  check_maintenance_window.rs  coolify_control_plane.rs  db_check.rs  db_migrate.rs  debug_site.rs  deploy_service.rs  deploy_theme.rs  deploy_websocket.rs  diagnose.rs  enforce_host_security.rs  exec_command.rs  export_database.rs  failover.rs  fix_db_auth.rs  git_status.rs  harden_ssh.rs  health_check.rs  host_exec.rs  import_database.rs  install_backups.rs  install_coolify.rs  inventory_light.rs  (+30 more)
templates/: kamples-stack.yaml  minecraft-stack.yaml  rust-stack.yaml  wordpress-stack.yaml
(+87 files in other folders)
