[package]
name = "coolify-manager-gui"
version = "1.0.0"
edition = "2021"
description = "GUI para Coolify Manager — Tauri v2 + React"
authors = ["1ndoryu"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
coolify-manager = { path = "../.." }
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
